Correcting the navbar and replacing the testimionials

--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     <title>Teifi Taekwondo</title>
   </head>
   <body>
-        <header>
+      <header>
         <!-- Logo Name Navigation-->
             <div class="container-fluid">
                 <div class="row">
@@ -19,43 +19,41 @@
                     <div class="col-md-8">
                         <h1 class="name">Teifi Taekwondo</h1>
                         <h3 class="slogan">Big Kicks begin with Small Clicks</h3>
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col">
-                            <ul id="nav" class="list-inline menucontainer">
-                                <li class="col-6 col-sm-3 list-inline-item menuitem">
-                                    <a href="index.html"><span>Home</span></a>
-                                </li>
-                                <li class="col-6 col-sm-3 list-inline-item menuitem">
-                                    <a href="about.html"><span>About</span></a>
-                                </li>
-                                <li class="col-6 col-sm-3 list-inline-item menuitem">
-                                    <div class="dropdown">
-                                        <a class="btn dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">Classes</a>
-                                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                                            <li><a class="dropdown-item" href="class_tiger.html">Tigers</a> </li>
-                                            <li><a class="dropdown-item" href="class_junior.html">Juniors</a></li>
-                                            <li><a class="dropdown-item" href="class_senior.html">Seniors</a></li>
-                                            <li><a class="dropdown-item" href="class_ladies.html">Ladies</a>  <span class="badge bg-success">New</span></li>
-                                        </ul>
-                                    </div>
-                                </li>
-                                <li class="col-6 col-sm-3 list-inline-item menuitem">
-                                    <a href="index.html"> <span>Contact</span></a>
-                                </li>
-                            </ul>        
+                        <div class="row">
+                            <div class="col">
+                                <ul id="nav" class="list-inline menucontainer">
+                                    <li class="col-6 col-sm-3 list-inline-item menuitem">
+                                        <a href="index.html"><span>Home</span></a>
+                                    </li>
+                                    <li class="col-6 col-sm-3 list-inline-item menuitem">
+                                        <a href="about.html"><span>About</span></a>
+                                    </li>
+                                    <li class="col-6 col-sm-3 list-inline-item menuitem">
+                                        <div class="dropdown">
+                                            <a class="btn dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">Classes</a>
+                                            <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                                                <li><a class="dropdown-item" href="class_tiger.html">Tigers</a></li>
+                                                <li><a class="dropdown-item" href="class_junior.html">Juniors</a></li>
+                                                <li><a class="dropdown-item" href="class_senior.html">Seniors</a></li>
+                                                <li><a class="dropdown-item" href="class_ladies.html">Ladies</a>  <span class="badge bg-success">New</span></li>
+                                            </ul>
+                                        </div>
+                                    </li>
+                                    <li class="col-6 col-sm-3 list-inline-item menuitem">
+                                        <a href="contact.html"> <span>Contact</span></a>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
+            </div>
         </header>
         <section>
             <!-- About the Club -->
             <div class="container">
                 <div class="row">
-                    <div class="col-md-8 history">
+                    <div class="col-md-9 history">
                         <h2 class="uppercase">What is Taekwondo?</h2>
                         <p>Taekwondo is a Martial Art from Korea, characterised by punching and kicking techniques with a focus on fast kicking techniques. It’s name is composed of three parts as shown in the English spelling, though it is one word in Korean. "Tae" means "foot,"; "Kwon" means "fist,"; and "Do" means the "way". It is quite literally the Way of the Foot and the Fist.</p>
                         <p>There are two main styles of Taekwondo.
@@ -65,8 +63,12 @@
                             </ul> 
                         </p>
                     </div>
-                    <div class="col-md-4">
-                        Gallery?
+                    <div class="col-md-3">
+                        <h3><span class="badge bg-success">Free</span> Trial Lessons</h3>
+                        <p>Your first two lessons are competely <em>free</em>.</p>
+                        <p>Come along and see if Taekwondo is for you. </p>
+                        <img class="dobok" src="assets/images/hero2.jpg" alt="Dobok">
+                        <h6>Free Dobok when you join up</h6>
                     </div>
                 </div>
             </div>
@@ -170,7 +172,7 @@
                 </div>    
                 <div class="col-md-5">
                     Sign Up for a trial class today
-                    <a href="#" type="button" class="btn btn-danger">Join In</a>
+                    <a href="contact.html" type="button" class="btn btn-danger">Join In</a>
                 </div>
                 <div class="col-md-3">Copywright 2021</div>
             </div>
