--- a/contact.html
+++ b/contact.html
@@ -19,42 +19,40 @@
                     <div class="col-md-8">
                         <h1 class="name">Teifi Taekwondo</h1>
                         <h3 class="slogan">Big Kicks begin with Small Clicks</h3>
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col">
-                            <ul id="nav" class="list-inline menucontainer">
-                                <li class="col-6 col-sm-3 list-inline-item menuitem">
-                                    <a href="index.html"> <span>Home</span> </a>
-                                </li>
-                                <li class="col-6 col-sm-3 list-inline-item menuitem">
-                                    <a href="about.html"><span>About</span></a>
-                                </li>
-                                <li class="col-6 col-sm-3 list-inline-item menuitem">
-                                    <div class="dropdown">
-                                        <a class="btn dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">Classes</a>
-                                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                                            <li><a class="dropdown-item" href="class_tiger.html">Tigers</a></li>
-                                            <li><a class="dropdown-item" href="class_junior.html">Juniors</a></li>
-                                            <li><a class="dropdown-item" href="class_senior.html">Seniors</a></li>
-                                            <li><a class="dropdown-item" href="class_ladies.html">Ladies</a>  <span class="badge bg-success">New</span></li>
-                                        </ul>
-                                    </div>
-                                </li>
-                                <li class="col-6 col-sm-3 list-inline-item menuitem">
-                                    <a href="contact.html"> <span>Contact</span></a>
-                                </li>
-                            </ul>        
+                        <div class="row">
+                            <div class="col">
+                                <ul id="nav" class="list-inline menucontainer">
+                                    <li class="col-6 col-sm-3 list-inline-item menuitem">
+                                        <a href="index.html"><span>Home</span></a>
+                                    </li>
+                                    <li class="col-6 col-sm-3 list-inline-item menuitem">
+                                        <a href="about.html"><span>About</span></a>
+                                    </li>
+                                    <li class="col-6 col-sm-3 list-inline-item menuitem">
+                                        <div class="dropdown">
+                                            <a class="btn dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">Classes</a>
+                                            <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                                                <li><a class="dropdown-item" href="class_tiger.html">Tigers</a></li>
+                                                <li><a class="dropdown-item" href="class_junior.html">Juniors</a></li>
+                                                <li><a class="dropdown-item" href="class_senior.html">Seniors</a></li>
+                                                <li><a class="dropdown-item" href="class_ladies.html">Ladies</a>  <span class="badge bg-success">New</span></li>
+                                            </ul>
+                                        </div>
+                                    </li>
+                                    <li class="col-6 col-sm-3 list-inline-item menuitem">
+                                        <a href="contact.html"> <span>Contact</span></a>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
+            </div>
         </header>
         <section>
             <div class="container">
                 <div class="row">
-                    <form class="col-md-8">
+                    <form class="col-md-9">
                         <!--Form Itself-->
                         <label for="fname">First Name:</label>
                         <input type="text" class="form-control" id="fname" placeholder="First name" aria-label="First name" required>
@@ -81,26 +79,49 @@
                         </div>
                         <button type="button" class="btn btn-danger">Free Lesson Please</button>
                     </form>
-                    <div class="col-md-2">
+                    <div class="col-md-3">
                         <h3><span class="badge bg-success">Free</span> Trial Lessons</h3>
                         <p>Your first two lessons are competely <em>free</em>.</p>
                         <p>Come along and see if Taekwondo is for you. </p>
-
+                        <img class="dobok" src="assets/images/hero2.jpg" alt="Dobok">
                         <h6>Free Dobok when you join up</h6>
-                        
                     </div>
                 </div>
             </div>
             
             <!-- Contact Information-->
            <div class="container">
-                <div class="row contact-info">
+               <div class="row">
+                    <h2>Where to find Us?</h2>
                     <div class="col-sm-6">
-                     Phone Number
-                     Email address
+                     <div class="contact-info-item">
+                            <div class="key">
+                                <p class="uppercase">Address:</p>
+                            </div>
+                            <div class="value">
+                                <p>St Dogmaels Memorial Hall, St Dogmaels, SA43 RFF </p>
+                            </div>
+                        </div>
+                        <div class="contact-info-item">
+                            <div class="key">
+                                <p class="uppercase">Telephone Number:</p>
+                            </div>
+                            <div class="value">
+                                <p>Coach Laura: 07091191144</p>
+                                <p>Coach Holly: 07911123456</p>
+                            </div>
+                        </div>
+                        <div class="contact-info-item">
+                            <div class="key">
+                                <p class="uppercase">Email Address:</p>
+                            </div>
+                            <div class="value">
+                                <p>coach@teifitkd.co.uk</p>
+                            </div>
+                        </div>
                     </div>
                     <div class="col-sm-6">
-                    Image of map location
+                        <img id="map" src="assets/images/map.jpg" alt="class location">
                     </div>
                 </div>
             </div> 
@@ -117,7 +138,7 @@
                 </div>    
                 <div class="col-md-5">
                     Sign Up for a trial class today
-                    <a href="#" type="button" class="btn btn-danger">Join In</a>
+                    <a href="contact.html" type="button" class="btn btn-danger">Join In</a>
                 </div>
                 <div class="col-md-3">Copywright 2021</div>
             </div>
