--- a/index.html
+++ b/index.html
@@ -19,37 +19,35 @@
                     <div class="col-md-8">
                         <h1 class="name">Teifi Taekwondo</h1>
                         <h3 class="slogan">Big Kicks begin with Small Clicks</h3>
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col">
-                            <ul id="nav" class="list-inline menucontainer">
-                                <li class="col-6 col-sm-3 list-inline-item menuitem">
-                                    <a href="index.html"> <span>Home</span> </a>
-                                </li>
-                                <li class="col-6 col-sm-3 list-inline-item menuitem">
-                                    <a href="about.html"><span>About</span></a>
-                                </li>
-                                <li class="col-6 col-sm-3 list-inline-item menuitem">
-                                    <div class="dropdown">
-                                        <a class="btn dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">Classes</a>
-                                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                                            <li><a class="dropdown-item" href="class_tiger.html">Tigers</a></li>
-                                            <li><a class="dropdown-item" href="class_junior.html">Juniors</a></li>
-                                            <li><a class="dropdown-item" href="class_senior.html">Seniors</a></li>
-                                            <li><a class="dropdown-item" href="class_ladies.html">Ladies</a>  <span class="badge bg-success">New</span></li>
-                                        </ul>
-                                    </div>
-                                </li>
-                                <li class="col-6 col-sm-3 list-inline-item menuitem">
-                                    <a href="index.html"> <span>Contact</span></a>
-                                </li>
-                            </ul>        
+                        <div class="row">
+                            <div class="col">
+                                <ul id="nav" class="list-inline menucontainer">
+                                    <li class="col-6 col-sm-3 list-inline-item menuitem">
+                                        <a href="index.html"><span>Home</span></a>
+                                    </li>
+                                    <li class="col-6 col-sm-3 list-inline-item menuitem">
+                                        <a href="about.html"><span>About</span></a>
+                                    </li>
+                                    <li class="col-6 col-sm-3 list-inline-item menuitem">
+                                        <div class="dropdown">
+                                            <a class="btn dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">Classes</a>
+                                            <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                                                <li><a class="dropdown-item" href="class_tiger.html">Tigers</a></li>
+                                                <li><a class="dropdown-item" href="class_junior.html">Juniors</a></li>
+                                                <li><a class="dropdown-item" href="class_senior.html">Seniors</a></li>
+                                                <li><a class="dropdown-item" href="class_ladies.html">Ladies</a>  <span class="badge bg-success">New</span></li>
+                                            </ul>
+                                        </div>
+                                    </li>
+                                    <li class="col-6 col-sm-3 list-inline-item menuitem">
+                                        <a href="contact.html"> <span>Contact</span></a>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
+            </div>
         </header>
         <section>
             <!-- Benefits of Meaning of TKD -->
@@ -61,7 +59,7 @@
                             <div class="col-md-5 benefit-left">
                                 <h3>Improve Fitness</h3>
                                 <hr>
-                                <p>Boost your stamina, get stronger, lose fat and improve your flexibility.</p>
+                                <p>Boost your stamina, get stronger, lose fat and improve your flexibility, all whilst learning a martial art.</p>
                                 <h3>Build Confidence</h3>
                                 <hr>
                                 <p>Break out of your shell with our warm and supportive community</p>
@@ -77,9 +75,9 @@
                         </div>
                     </div>
                     <div class="col-md-2 meaning">
-                        <h2 class="uppercase">Tae</h2>
-                        <h2 class="uppercase">Kwon</h2> 
-                        <h2 class="uppercase">Do</h2>
+                        <p><span class="langk">태</span> <span class="lange">Tae</span><span class="translation">The Foot</span></p>
+                        <p><span class="langk">권</span> <span class="lange">Kwon</span> <span class="translation">The Fist</span></p>
+                        <p><span class="langk">도</span> <span class="lange">Do</span> <span class="translation">The Way</span></p>
                     </div>
                 </div>
             </div>
@@ -137,7 +135,7 @@
                 </div>
             </div>
             <!-- Contact Information-->
-           <div class="container">
+           <div class="container mapdetails">
                 <div class="row">
                     <h2>Where to find Us?</h2>
                     <div class="col-sm-6">
@@ -175,37 +173,22 @@
             <div class="container">
                 <div class="row">
                     <div class="col testimonials">
-                        <h2>What our students say</h2>
+                        <h2>What our students say...</h2>
                         <div class="row">
-                            <div class="col">
-                                <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-                                     <div class="carousel-inner">
-                                         <div class="carousel-item active">       
-                                                <blockquote>Laura, Holly and the team have given my daughter so much confidence since starting our silent ninja is a respectful warrior.</blockquote>
-                                                <p class="parent">Scott Summers</p>
-                                         </div>
-                                         <div class="carousel-item">
-                                                <blockquote>The focus on fun in these sessions is perfect. The skills and techniques are flooding in and my son doesn’t notice he’s learning.</blockquote>
-                                                <p class="parent">Jean Grey</p>
-                                         </div>
-                                         <div class="carousel-item">
-                                                <blockquote>The kids don’t want to leave the hall at 7:15 they want to mix it up with the seniors</blockquote>
-                                                <p class="parent">Matt Murdock</p>
-                                         </div>
-                                         <div class="carousel-item">
-                                                <blockquote>After sitting on the sidelines watching my children for months I was gently encouraged to stepped into the ladies class. I’m loving it, quickly catching the kids up and have enough confidence to join the senior class.</blockquote>
-                                                <p class="parent">Susan Storm</p>
-                                         </div>
-                                    </div>
-                                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-                                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                        <span class="visually-hidden">Previous</span>
-                                    </button>
-                                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-                                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                        <span class="visually-hidden">Next</span>
-                                    </button>
-                                </div>
+                            <div class="col-lg-4">
+                                <img class="imagequote" src="assets/images/ladies2.jpeg" alt="Parent of Pupils">
+                                <blockquote>Laura, Holly and the team have given my daughter so much confidence since starting our silent ninja is a respectful warrior.</blockquote>
+                                <p class="parent">Scott Summers</p>
+                            </div>
+                            <div class="col-lg-4">
+                                <img class="imagequote" src="assets/images/ladies2.jpeg" alt="Student and Parent">
+                                <blockquote>After sitting on the sidelines watching my children for months I was gently encouraged to stepped into the ladies class. I’m loving it, quickly catching the kids up and have enough confidence to join the senior class.</blockquote>
+                                <p class="parent">Susan Storm</p>
+                            </div>
+                            <div class="col-lg-4">
+                                <img class="imagequote" src="assets/images/ladies2.jpeg" alt="Parent of Pupils">
+                                <blockquote>The focus on fun in these sessions is perfect. The skills and techniques are flooding in and my son doesn’t notice he’s learning.</blockquote>
+                                <p class="parent">Jean Grey</p>
                             </div>
                         </div>
                     </div>
@@ -224,7 +207,7 @@
                 </div>    
                 <div class="col-md-5">
                     Sign Up for a trial class today
-                    <a href="#" type="button" class="btn btn-danger">Join In</a>
+                    <a href="contact.html" type="button" class="btn btn-danger">Join In</a>
                 </div>
                 <div class="col-md-3">Copywright 2021</div>
             </div>
