--- a/class_ladies.html
+++ b/class_ladies.html
@@ -11,7 +11,7 @@
     <title>Teifi Taekwondo</title>
   </head>
   <body>
-        <header>
+      <header>
         <!-- Logo Name Navigation-->
             <div class="container-fluid">
                 <div class="row">
@@ -19,37 +19,35 @@
                     <div class="col-md-8">
                         <h1 class="name">Teifi Taekwondo</h1>
                         <h3 class="slogan">Big Kicks begin with Small Clicks</h3>
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col">
-                            <ul id="nav" class="list-inline menucontainer">
-                                <li class="col-6 col-sm-3 list-inline-item menuitem">
-                                    <a href="index.html"><span>Home</span></a>
-                                </li>
-                                <li class="col-6 col-sm-3 list-inline-item menuitem">
-                                    <a href="about.html"><span>About</span></a>
-                                </li>
-                                <li class="col-6 col-sm-3 list-inline-item menuitem">
-                                    <div class="dropdown">
-                                        <a class="btn dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">Classes</a>
-                                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                                            <li><a class="dropdown-item" href="class_tiger.html">Tigers</a></li>
-                                            <li><a class="dropdown-item" href="class_junior.html">Juniors</a></li>
-                                            <li><a class="dropdown-item" href="class_senior.html">Seniors</a></li>
-                                            <li><a class="dropdown-item" href="class_ladies.html">Ladies</a>  <span class="badge bg-success">New</span></li>
-                                        </ul>
-                                    </div>
-                                </li>
-                                <li class="col-6 col-sm-3 list-inline-item menuitem">
-                                    <a href="contact.html"> <span>Contact</span></a>
-                                </li>
-                            </ul>        
+                        <div class="row">
+                            <div class="col">
+                                <ul id="nav" class="list-inline menucontainer">
+                                    <li class="col-6 col-sm-3 list-inline-item menuitem">
+                                        <a href="index.html"><span>Home</span></a>
+                                    </li>
+                                    <li class="col-6 col-sm-3 list-inline-item menuitem">
+                                        <a href="about.html"><span>About</span></a>
+                                    </li>
+                                    <li class="col-6 col-sm-3 list-inline-item menuitem">
+                                        <div class="dropdown">
+                                            <a class="btn dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">Classes</a>
+                                            <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                                                <li><a class="dropdown-item" href="class_tiger.html">Tigers</a></li>
+                                                <li><a class="dropdown-item" href="class_junior.html">Juniors</a></li>
+                                                <li><a class="dropdown-item" href="class_senior.html">Seniors</a></li>
+                                                <li><a class="dropdown-item" href="class_ladies.html">Ladies</a>  <span class="badge bg-success">New</span></li>
+                                            </ul>
+                                        </div>
+                                    </li>
+                                    <li class="col-6 col-sm-3 list-inline-item menuitem">
+                                        <a href="contact.html"> <span>Contact</span></a>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
+            </div>
         </header>
         <section>
             <!-- About the Class -->
@@ -113,7 +111,7 @@
                 </div>    
                 <div class="col-md-5">
                     Sign Up for a trial class today
-                    <a href="#" type="button" class="btn btn-danger">Join In</a>
+                    <a href="contact.html" type="button" class="btn btn-danger">Join In</a>
                 </div>
                 <div class="col-md-3">Copywright 2021</div>
             </div>
