addition of FAQs in About and Information in Class Page

--- a/about.html
+++ b/about.html
@@ -159,6 +159,81 @@
                     </div>
                 </div>
             </div>
+            <!-- FAQs -->
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <h2>Frequently Asked Questions</h2>
+                        <div class="accordion accordion-flush" id="accordionFlushExample">
+                            <div class="accordion-item">
+                        <h2 class="accordion-header" id="flush-headingOne">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                             What Do I wear to training?
+                            </button>
+                        </h2>
+                        <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body">
+                                <p>Our classes take place in a matted Dojang. Takewondo is done with bare feet so there's no need to buy expensive trainers.We suggest that all new starters wear loose fitting clothing (without zips or buttons) until you have obtained your Dobok (provided with your membership).</p>
+                                <p>Additional items can be purchased from the Coaches.  We also suggest that students come with a bottle of water and a if preferred a towel.</p>
+                            
+                            </div>
+                        </div>
+                            </div>
+                            <div class="accordion-item">
+                        <h2 class="accordion-header" id="flush-headingTwo">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                             Do I need a licence and insurance?
+                            </button>
+                        </h2>
+                        <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body">
+                                 All students require a licence and insurance. We have placed these in the annual membership to Teifi Taekwondo.
+                            </div>
+                        </div>
+                            </div>
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="flush-headingThree">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                                        Do I have to stay and watch while my child trains?
+                                    </button>
+                                </h2>
+                                <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                                    <div class="accordion-body">
+                                        This really depends on how old and mature the child is. The honest answer is, we prefer for parents to stay and watches. We have found that  if parents are not present its very difficult for them to understand what the child has to learn to achieve the next belt, it also makes the getting sparring equipment on and off a little easier.
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="flush-headingFour">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
+                                        Do I need sparring equipment? What equipment do I need?
+                                    </button>
+                                </h2>
+                                <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour" data-bs-parent="#accordionFlushExample">
+                                    <div class="accordion-body">
+                                        <p>Sparring equipment can be purchased at any point in during your training journey, however All students will need sparring equipment when they are promoted to Green Belt Blue Stripe.</p>
+                                        <p>Your sparring equipment consists of head guard, hand pads, feet pads, shin pads, gum shield, and either a groin guard (Boys & Men) or breast protectors (ladies). Due to the volume of equipment a bag to hold them in is suggested.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="flush-headingFive">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFive" aria-expanded="false" aria-controls="flush-collapseFive">
+                                        Do I have to grade for belts?
+                                    </button>
+                                </h2>
+                                <div id="flush-collapseFive" class="accordion-collapse collapse" aria-labelledby="flush-headingFive" data-bs-parent="#accordionFlushExample">
+                                    <div class="accordion-body">
+                                        <p>Grading for belts is purely optional. The belt system sets goals for students and encourages them to learn new things and face fresh challenges. However, if a student does not wish to grade, we will still be happy for them to train with us.</p>
+                                        <p>There are 4 coloured belt gradings a year. Every March, June, September and December.</p>
+                                        <p>There are 2 black belt gradings a year. Every April and October</p>
+                                    </div>
+                                </div>
+                            </div>         
+                         </div>
+                    </div>
+                </div>
+            </div>
         </section>
         <footer>
             <!-- sections 1 social media -->
