--- a/class_senior.html
+++ b/class_senior.html
@@ -66,7 +66,8 @@
                             </thead>
                         </table>
                         <img class="classimage" src="assets/images/senior 2.jpg" alt="Seniors in training">
-                        <p>Text for the Seniors Sessions</p>
+                        <p>Our Senior class encompasses everything found in our juniors class but with the adults instead. We teach all the basic, intermediate and advanced techniques in order to give you the skills to make you a rounded Martial Artist and on the road to eventually earning a Black Belt, which is only the first chapter on the journey.</p>
+                        <p>Whether your a beginner, have limited experience or a seasoned veteran there is plenty of space on our mats.</p>
                     </div>
                     <div class="col-md-4">
                         <h3>Class Coaches</h3>
