--- a/class_senior.html
+++ b/class_senior.html
@@ -11,43 +11,33 @@
     <title>Teifi Taekwondo</title>
   </head>
   <body>
-      <header>
+       <header>
         <!-- Logo Name Navigation-->
-            <div class="container-fluid">
-                <div class="row">
-                    <a class="col-md-4 logo" href="index.html"></a>
-                    <div class="col-md-8">
+            <div class="container-fluid ">
+                <div class="row justify-content-center">
+                    <a class="col-md-1 col-sm-5 logo" href="index.html"></a>
+                    <div class="col-md-4 col-sm-7 margin-title">
                         <h1 class="name">Teifi Taekwondo</h1>
                         <h3 class="slogan">Big Kicks begin with Small Clicks</h3>
-                        <div class="row">
-                            <div class="col">
-                                <ul id="nav" class="list-inline menucontainer">
-                                    <li class="col-6 col-sm-3 list-inline-item menuitem">
-                                        <a href="index.html"><span>Home</span></a>
-                                    </li>
-                                    <li class="col-6 col-sm-3 list-inline-item menuitem">
-                                        <a href="about.html"><span>About</span></a>
-                                    </li>
-                                    <li class="col-6 col-sm-3 list-inline-item menuitem">
-                                        <div class="dropdown">
-                                            <a class="btn dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">Classes</a>
-                                            <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                                                <li><a class="dropdown-item" href="class_tiger.html">Tigers</a></li>
-                                                <li><a class="dropdown-item" href="class_junior.html">Juniors</a></li>
-                                                <li><a class="dropdown-item" href="class_senior.html">Seniors</a></li>
-                                                <li><a class="dropdown-item" href="class_ladies.html">Ladies</a>  <span class="badge bg-success">New</span></li>
-                                            </ul>
-                                        </div>
-                                    </li>
-                                    <li class="col-6 col-sm-3 list-inline-item menuitem">
-                                        <a href="contact.html"> <span>Contact</span></a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
+                       
                     </div>
                 </div>
             </div>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light ">
+                <div class="container-fluid">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse justify-content-center nav_bg" id="navbarNavAltMarkup">
+                        <div class="navbar-nav">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link" href="#">About</a>
+                            <a class="nav-link" href="#">Classes</a>
+                            <a class="nav-link" href="#">Contact</a>
+                        </div>
+                    </div>
+                </div>
+            </nav>
         </header>
         <section>
             <!-- About the Class -->
